--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/03_Practica_Obligatoria/18_Practica_Obligatoria_Colecciones_Funciones.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/03_Practica_Obligatoria/18_Practica_Obligatoria_Colecciones_Funciones.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -59,9 +59,32 @@
     }
    ],
    "source": [
-    "ejer_2 = [1,2,3,4,5] # Lista de elementos\n",
+    "ejer_2 = [1,2,3,4,5]# Lista de elementos\n",
     "ejer_2 = [n**2 for n in ejer_2] # Bucle comprimido que eleva al cuadrado cada elemento\n",
     "print(ejer_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 16, 81, 256, 625]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def elevar_cuadrado(elemento):\n",
+    "    return elemento ** 2\n",
+    "\n",
+    "list(map(elevar_cuadrado, ejer_2))"
    ]
   },
   {
@@ -86,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'un': [0, 7], 'es': [3, 13], 'binario': [2, 15]}\n"
+      "{'un': [[0, 'Un'], [7, 'un']], 'es': [[3, 'es'], [13, 'es']], 'binario': [[2, 'binario'], [15, 'binario']]}\n"
      ]
     }
    ],
@@ -106,6 +129,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['binario', 'es']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "duplicado = []\n",
+    "for palabras in ejer_3:\n",
+    "    if ejer_3.count(palabras) > 1:\n",
+    "        duplicado.append(palabras)\n",
+    "        duplicado = set(duplicado)  \n",
+    "        duplicado = list(duplicado)\n",
+    "print(duplicado)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -118,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -126,13 +173,13 @@
      "output_type": "stream",
      "text": [
       "7\n",
-      "(3, 29, 45, 67, 78, 90)\n",
-      "26\n"
+      "(3, 29, 45, 67, 78, 60)\n",
+      "27\n"
      ]
     }
    ],
    "source": [
-    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 60, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
     "# Contamos las veces que se repite el n 3\n",
     "print(ejer_9.count(3))\n",
     "\n",
@@ -154,20 +201,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "10\n",
+      "1\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    # Si no exite el número en la tupla dará una excepción\n",
+    "    # Si no existe el número en la tupla dará una excepción\n",
     "    print(ejer_9.index(60))\n",
     "    \n",
     "    # Devuelve el número de veces que existe el número en la tupla, si devuelve 0, no existe\n",
@@ -261,14 +309,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'Español', 'año de publicación': 1967}, {'titulo': '1984', 'autor': 'George Orwell', 'idioma original': 'Inglés', 'año de publicación': 1949}, {'titulo': 'El Principito', 'autor': 'Antoine de Saint-Exupéry', 'idioma original': 'Francés', 'año de publicación': 1943}, {'titulo': 'Orgullo y prejuicio', 'autor': 'Jane Austen', 'idioma original': 'Inglés', 'año de publicación': 1813}]\n"
+      "[{'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'Español', 'año de publicación': 1967}, {'titulo': '1984', 'autor': 'George Orwell', 'idioma original': 'Inglés', 'año de publicación': 1949}, {'titulo': 'El Principito', 'autor': 'Antoine de Saint-Exupéry', 'idioma original': 'Francés', 'año de publicación': 1943}, {'titulo': 'Orgullo y prejuicio', 'autor': 'Jane Austen', 'idioma original': 'Inglés', 'año de publicación': 1813}]\n",
+      "('titulo', 'Orgullo y prejuicio') ('autor', 'Jane Austen') ('idioma original', 'Inglés') ('año de publicación', 1813)\n"
      ]
     }
    ],
@@ -301,9 +350,11 @@
     "}\n",
     "libreria = []\n",
     "\n",
+    "\n",
     "libreria.extend([libro1, libro2, libro3, libro4])\n",
     "\n",
-    "print(libreria)"
+    "print(libreria)\n",
+    "print(*libro4.items())"
    ]
   },
   {
@@ -323,6 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'x': 1, 'y': 2}\n",
       "[{'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'Español', 'año de publicación': 1967}, {'titulo': '1984', 'autor': 'George Orwell', 'idioma original': 'Inglés', 'año de publicación': 1949}, {'titulo': 'El Principito', 'autor': 'Antoine de Saint-Exupéry', 'idioma original': 'Francés', 'año de publicación': 1943}, {'titulo': 'Orgullo y prejuicio', 'autor': 'Jane Austen', 'idioma original': 'Inglés', 'año de publicación': 1813}]\n",
       "[{'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'esperanto', 'año de publicación': 1967}, {'titulo': '1984', 'autor': 'George Orwell', 'idioma original': 'esperanto', 'año de publicación': 1949}, {'titulo': 'El Principito', 'autor': 'Antoine de Saint-Exupéry', 'idioma original': 'esperanto', 'año de publicación': 1943}, {'titulo': 'Orgullo y prejuicio', 'autor': 'Jane Austen', 'idioma original': 'esperanto', 'año de publicación': 1813}]\n",
       "[{'titulo': 'Cien años de soledad', 'autor': 'Manuel Ros Martinez', 'idioma original': 'esperanto', 'año de publicación': 1967}, {'titulo': '1984', 'autor': 'Manuel Ros Martinez', 'idioma original': 'esperanto', 'año de publicación': 1949}, {'titulo': 'El Principito', 'autor': 'Manuel Ros Martinez', 'idioma original': 'esperanto', 'año de publicación': 1943}, {'titulo': 'Orgullo y prejuicio', 'autor': 'Manuel Ros Martinez', 'idioma original': 'esperanto', 'año de publicación': 1813}]\n"
