--- a/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/03_Practica_Obligatoria/18_Practica_Obligatoria_OOP.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_02_Python_III_Modulos_OOP/03_Practica_Obligatoria/18_Practica_Obligatoria_OOP.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -161,8 +161,19 @@
      "text": [
       "Jeff tiene un saldo de 68.\n",
       "Joe tiene un saldo de 20. Jeff tiene un saldo de 118.\n",
-      "Jeff tiene un saldo de 38. Joe tiene un saldo de 100.\n",
-      "Jeff tiene un saldo de 58.\n"
+      "Jeff tiene un saldo de 38. Joe tiene un saldo de 100.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "No puedes transferir más dinero del que tienes.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(Jeff.transfer(Joe, \u001b[32m80\u001b[39m)) \u001b[38;5;66;03m# Lanza un ValueError: Joe no puede recibir transferencias.\u001b[39;00m\n\u001b[32m     10\u001b[39m Joe.checking_account = \u001b[38;5;28;01mTrue\u001b[39;00m \u001b[38;5;66;03m# Habilita la cuenta corriente para que Joe pueda recibir transferencias.\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mJeff\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtransfer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mJoe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m80\u001b[39;49m\u001b[43m)\u001b[49m) \u001b[38;5;66;03m# Devuelve 'Jeff tiene un saldo de 38 y Joe tiene un saldo de 100.'\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;28mprint\u001b[39m(Jeff.transfer(Joe, \u001b[32m100\u001b[39m)) \u001b[38;5;66;03m# Lanza un ValueError: Jeff no tiene suficiente dinero para la transacción.\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(Jeff.deposit(\u001b[32m20.00\u001b[39m)) \u001b[38;5;66;03m# Devuelve 'Jeff tiene un saldo de 58.'\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 41\u001b[39m, in \u001b[36mUser.transfer\u001b[39m\u001b[34m(self, otro_usuario, dinero)\u001b[39m\n\u001b[32m     39\u001b[39m dinero = \u001b[38;5;28mint\u001b[39m(dinero)\n\u001b[32m     40\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m dinero > \u001b[38;5;28mself\u001b[39m.saldo:\n\u001b[32m---> \u001b[39m\u001b[32m41\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mNo puedes transferir más dinero del que tienes.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     42\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m otro_usuario.checking_account:\n\u001b[32m     43\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00motro_usuario.nombre\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m no puede recibir transferencias.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: No puedes transferir más dinero del que tienes."
      ]
     }
    ],
