--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/10_Ejercicios_Array.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/10_Ejercicios_Array.ipynb
@@ -54,10 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.3.4'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.__version__"
+   ]
   },
   {
    "attachments": {
@@ -82,10 +97,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = np.arange(9)\n",
+    "print(my_array)"
+   ]
   },
   {
    "attachments": {
@@ -110,10 +136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 1]\n",
+      " [1 1 1]\n",
+      " [1 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz_3x3 = np.ones((3,3), dtype=int)\n",
+    "print(matriz_3x3)"
+   ]
   },
   {
    "attachments": {
@@ -138,10 +177,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True False  True False  True False  True False  True]\n",
+      "[0 2 4 6 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bools = np.array(my_array % 2 == 0)\n",
+    "print(bools)\n",
+    "my_array2 = my_array[bools]\n",
+    "print(my_array2)\n"
+   ]
   },
   {
    "attachments": {
@@ -166,10 +219,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 -1  2 -1  4 -1  6 -1  8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array3 = my_array.copy()\n",
+    "\n",
+    "my_array3[my_array % 2 != 0] = -1\n",
+    "\n",
+    "print(my_array3)"
+   ]
   },
   {
    "attachments": {
@@ -194,10 +261,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]] 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array_mod = my_array.reshape(3,3)\n",
+    "print(my_array_mod, my_array_mod.ndim)"
+   ]
   },
   {
    "attachments": {
@@ -223,10 +303,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]\n",
+      " [11 12 13 14 15]\n",
+      " [16 17 18 19 20]]\n",
+      "[[20 19 18 17 16]\n",
+      " [15 14 13 12 11]\n",
+      " [10  9  8  7  6]\n",
+      " [ 5  4  3  2  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz = np.arange(1,21)\n",
+    "print(matriz)\n",
+    "matriz = matriz.reshape(4,5)\n",
+    "print(matriz)\n",
+    "matriz = matriz[::-1, ::-1]\n",
+    "print(matriz)\n"
+   ]
   },
   {
    "attachments": {
@@ -256,10 +359,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 6]\n",
+      " [2 1]]\n",
+      "[[1 2]\n",
+      " [6 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz2 = matriz[-2:, -2:]\n",
+    "print(matriz2)\n",
+    "matriz2 = matriz2[::-1, ::-1]\n",
+    "print(matriz2)"
+   ]
   },
   {
    "attachments": {
@@ -288,10 +407,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]\n",
+      " [11 12 13 14 15]\n",
+      " [16 17 18 19 20]]\n",
+      "[[ 1  3  5]\n",
+      " [11 13 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz3 = matriz[::-1, ::-1]\n",
+    "print(matriz3)\n",
+    "matriz3 = matriz3[:3:2, ::2]\n",
+    "print(matriz3)\n"
+   ]
   },
   {
    "attachments": {
@@ -325,10 +462,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[15 11 11 18 17 18]\n",
+      "  [15 17 13 12 16 19]]\n",
+      "\n",
+      " [[15 15 16 14 18 14]\n",
+      "  [18 10 18 18 11 13]]\n",
+      "\n",
+      " [[14 15 14 10 18 17]\n",
+      "  [14 16 15 14 16 14]]\n",
+      "\n",
+      " [[12 18 16 18 16 16]\n",
+      "  [15 11 19 12 10 17]]\n",
+      "\n",
+      " [[13 16 12 12 15 19]\n",
+      "  [12 19 10 10 18 13]]]\n",
+      "60\n",
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "x =np.random.randint(10, 20, size = (5,2,6))\n",
+    "print(x)\n",
+    "print(x.size)\n",
+    "print(x.ndim)\n",
+    "print(x.shape[-1])"
+   ]
   },
   {
    "attachments": {
@@ -358,11 +525,60 @@
     "\n",
     "Resuélvelo de dos maneras diferentes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loro' 'Loro']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([\"Loro\", \"Perro\", \"Gato\", \"Loro\", \"Perro\"])\n",
+    "\n",
+    "x1 = x[x == \"Loro\"]\n",
+    "\n",
+    "print(x1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True False False  True False]\n",
+      "['Loro' 'Loro']\n"
+     ]
+    }
+   ],
+   "source": [
+    "bools = np.array(x == \"Loro\")\n",
+    "print(bools)\n",
+    "x2 = x[bools]\n",
+    "print(x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -376,12 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "252189e587d1e2aeba4a06e91fa71896c7a7f6e22e918b9407c7cde4ef2d5985"
-   }
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
