Sprint3 Unidad2 Workout

--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
@@ -58,10 +58,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A:\n",
+      " [[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "\n",
+      "B:\n",
+      " [[1 1 1 1 1]\n",
+      " [1 1 1 1 1]]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4],\n",
+       "       [5, 6, 7, 8, 9],\n",
+       "       [1, 1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(10).reshape(2,-1)\n",
+    "b = np.repeat(1, 10).reshape(2,-1)\n",
+    "print(f\"A:\\n {a}\\n\")\n",
+    "print(f\"B:\\n {b}\\n\")\n",
+    "np.concatenate([a,b])\n"
+   ]
   },
   {
    "attachments": {
@@ -91,10 +134,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A:\n",
+      " [[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "\n",
+      "B:\n",
+      " [[1 1 1 1 1]\n",
+      " [1 1 1 1 1]]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4, 1, 1, 1, 1, 1],\n",
+       "       [5, 6, 7, 8, 9, 1, 1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(10).reshape(2,-1)\n",
+    "b = np.repeat(1, 10).reshape(2,-1)\n",
+    "print(f\"A:\\n {a}\\n\")\n",
+    "print(f\"B:\\n {b}\\n\")\n",
+    "np.concatenate([a, b], axis=1)"
+   ]
   },
   {
    "attachments": {
@@ -123,10 +198,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 10 20 30 40 50 60 70 80 90]\n",
+      "90\n",
+      "[1 2 3 4 5 6 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = np.arange(10)\n",
+    "new_array = np.dot(my_array, 10)\n",
+    "print(new_array)\n",
+    "print(new_array[-1])\n",
+    "print(my_array[1:8])"
+   ]
   },
   {
    "attachments": {
@@ -154,10 +245,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  4,  7, 10, 13, 16, 19, 22, 25, 28, 31, 34, 37, 40, 43, 46, 49])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "secuence = np.arange(51)\n",
+    "secuence[1:-1:3]"
+   ]
   },
   {
    "attachments": {
@@ -185,10 +290,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.25 1.5  1.75 2.   2.25 2.5  2.75 3.   3.25 3.5  3.75 4.  ]\n",
+      "[4.   3.75 3.5  3.25 3.   2.75 2.5  2.25 2.   1.75 1.5  1.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "secuence2 = np.arange(1.25, 4.25, 0.25)\n",
+    "print(secuence2)\n",
+    "print(secuence2[::-1])"
+   ]
   },
   {
    "attachments": {
@@ -213,10 +331,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.54476139 0.29299202 0.91846056]\n",
+      "  [0.73048425 0.95542134 0.66451415]\n",
+      "  [0.04355689 0.86286118 0.46613998]]\n",
+      "\n",
+      " [[0.32719599 0.95026183 0.0300789 ]\n",
+      "  [0.27934931 0.64608002 0.06406185]\n",
+      "  [0.3679411  0.40867238 0.86547526]]\n",
+      "\n",
+      " [[0.88692112 0.87037661 0.04674834]\n",
+      "  [0.1624221  0.87897636 0.23584804]\n",
+      "  [0.20843479 0.07935379 0.49134335]]\n",
+      "\n",
+      " [[0.23593052 0.85240382 0.92160626]\n",
+      "  [0.02747448 0.08590348 0.82052461]\n",
+      "  [0.69051727 0.62340762 0.64928889]]\n",
+      "\n",
+      " [[0.13033645 0.41248139 0.28977743]\n",
+      "  [0.37679386 0.94543358 0.81559461]\n",
+      "  [0.47328833 0.4990918  0.15912664]]]\n",
+      "Dimensiones: 3\n",
+      "Tamaño: (5, 3, 3)\n",
+      "Número de elementos: 45\n",
+      "Tipo: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_secuence = np.random.rand(5, 3, 3)\n",
+    "print(random_secuence)\n",
+    "print(f\"Dimensiones: {random_secuence.ndim}\")\n",
+    "print(f\"Tamaño: {random_secuence.shape}\")\n",
+    "print(f\"Número de elementos: {random_secuence.size}\")\n",
+    "print(f\"Tipo: {random_secuence.dtype}\")"
+   ]
   },
   {
    "attachments": {
@@ -243,10 +398,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3 -1 -1 -1 -1  8  9 10]\n",
+      "[ 0  1  2  3 -4 -5 -6 -7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "secuence3 = np.arange(11)\n",
+    "new_secuence = np.where((secuence3 > 3) & (secuence3 < 8), -1, secuence3)\n",
+    "new_secuence2 = np.where((secuence3 > 3) & (secuence3 < 8), -secuence3, secuence3)\n",
+    "print(new_secuence)\n",
+    "print(new_secuence2)"
+   ]
   },
   {
    "attachments": {
@@ -273,10 +443,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5  6]\n",
+      " [ 7  8  9 10 11 12]\n",
+      " [13 14 30 32 17 18]\n",
+      " [19 20 42 44 23 24]\n",
+      " [25 26 27 28 29 30]\n",
+      " [31 32 33 34 35 36]]\n",
+      "[[30 32]\n",
+      " [42 44]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz_6x6 = np.arange(1,37)\n",
+    "matriz_6x6 = matriz_6x6.reshape(6,6)\n",
+    "matriz_2x2 = matriz_6x6[2:4, 2:4]\n",
+    "matriz_6x6[2:4, 2:4] *= 2 \n",
+    "print(matriz_6x6)\n",
+    "print(matriz_2x2)"
+   ]
   },
   {
    "attachments": {
@@ -301,10 +493,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[10  8]\n",
+      "  [10  7]\n",
+      "  [ 3  5]]\n",
+      "\n",
+      " [[ 3  9]\n",
+      "  [ 3 10]\n",
+      "  [ 8  3]]]\n",
+      "[[[10  8]\n",
+      "  [10 -1]\n",
+      "  [-1 -1]]\n",
+      "\n",
+      " [[-1 -1]\n",
+      "  [-1 10]\n",
+      "  [ 8 -1]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array1 = np.random.randint(1, 11, size = (2, 3, 2))\n",
+    "print(array1)\n",
+    "array1 = np.where(array1 % 2 != 0, -1, array1)\n",
+    "print(array1)"
+   ]
   },
   {
    "attachments": {
@@ -329,10 +547,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 0 0 4 0]\n",
+      "(array([0, 1, 4]),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "array2 = np.array([1,2,0,0,4,0])\n",
+    "print(array2)\n",
+    "array3 = np.where(array2 != 0)\n",
+    "print(array3)"
+   ]
   },
   {
    "attachments": {
@@ -357,6 +589,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['El' 'viento' 'sopló']\n",
+      " ['sobre' 'su' 'sombra']\n",
+      " ['maldita' 'y' 'traicionera']]\n",
+      "[['2' '6' '5']\n",
+      " ['5' '2' '6']\n",
+      " ['7' '1' '11']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array4 = np.array([[\"El\"],[\"viento\"],[\"sopló\"],[\"sobre\"],[\"su\"],[\"sombra\"],\n",
+    "                  [\"maldita\"],[\"y\"],[\"traicionera\"]]).reshape(3,3)\n",
+    "\n",
+    "# array4[0,0] = len(array4[0,0])\n",
+    "array5 = np.array(array4)\n",
+    "for i, value in enumerate(array4):\n",
+    "    for j, v in enumerate(value):\n",
+    "        array5[i,j] = len(v)\n",
+    "\n",
+    "print(array4)\n",
+    "print(array5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -365,7 +629,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -379,12 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "252189e587d1e2aeba4a06e91fa71896c7a7f6e22e918b9407c7cde4ef2d5985"
-   }
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
