--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/12_Ejercicios_Agregaciones_y_otras_funciones.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/02_Ejercicios_Workout/12_Ejercicios_Agregaciones_y_otras_funciones.ipynb
@@ -54,10 +54,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.90442888 0.27213366 0.00828749 0.36626043 0.7783814  0.36601282\n",
+      "  0.49902636 0.62301912 0.20254769 0.47585074]\n",
+      " [0.69667001 0.53483217 0.10496362 0.79822071 0.41942768 0.75099503\n",
+      "  0.73524347 0.06998459 0.43070475 0.56536659]\n",
+      " [0.3640871  0.57218787 0.33056997 0.98572861 0.44551667 0.91083556\n",
+      "  0.09070694 0.59569804 0.98869436 0.19750096]\n",
+      " [0.57138306 0.45766379 0.66644172 0.19305563 0.10406395 0.50007438\n",
+      "  0.88662546 0.75465744 0.23013414 0.14709791]\n",
+      " [0.37474238 0.75569704 0.17387453 0.86099719 0.29633021 0.37745631\n",
+      "  0.24309963 0.6274807  0.22567455 0.42679204]\n",
+      " [0.8552831  0.47437476 0.77120957 0.17949733 0.15561299 0.49132411\n",
+      "  0.81438249 0.35033509 0.03652165 0.93165755]\n",
+      " [0.28582268 0.28413948 0.96645663 0.21119549 0.23748085 0.75584039\n",
+      "  0.67636105 0.98510168 0.63673906 0.38974348]\n",
+      " [0.18323202 0.70202004 0.3960283  0.08033662 0.30261433 0.78022517\n",
+      "  0.30417715 0.00327207 0.34384466 0.56077601]\n",
+      " [0.62751635 0.39256515 0.39193012 0.72968741 0.8444898  0.56189522\n",
+      "  0.52026148 0.42210708 0.54670137 0.22683311]\n",
+      " [0.81140349 0.49721301 0.18837063 0.20297473 0.17868705 0.54903099\n",
+      "  0.01548992 0.63948947 0.30878507 0.91447416]]\n",
+      "0.0032720746759522523\n",
+      "0.9886943619698223\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = np.random.rand(10, 10)\n",
+    "print(M)\n",
+    "print(M.min())\n",
+    "print(M.max())"
+   ]
   },
   {
    "attachments": {
@@ -82,10 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4634660352632983\n"
+     ]
+    }
+   ],
+   "source": [
+    "V = np.random.rand(30)\n",
+    "print(V.mean())"
+   ]
   },
   {
    "attachments": {
@@ -120,10 +174,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz_8x8 = np.random.rand(8,8)\n",
+    "matriz_8x8[::, ::2] = 0\n",
+    "matriz_8x8[::, 1::2] = 1\n",
+    "print(matriz_8x8)"
+   ]
   },
   {
    "attachments": {
@@ -147,9 +221,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat = np.array([0,1])\n",
+    "matriz_8x8_2 = np.tile(mat, (8,8))\n",
+    "\n",
+    "matriz_8x8_2"
+   ]
   },
   {
    "attachments": {
@@ -174,10 +273,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4  4  8  3  2]\n",
+      " [ 2  6 10  5  7]\n",
+      " [ 5  2  7  6  7]\n",
+      " [ 9  6  8 10  4]\n",
+      " [10  2  8  3  6]]\n",
+      "Media:  5.76\n",
+      "Datos entorno a 0: \n",
+      " [[-1.76 -1.76  2.24 -2.76 -3.76]\n",
+      " [-3.76  0.24  4.24 -0.76  1.24]\n",
+      " [-0.76 -3.76  1.24  0.24  1.24]\n",
+      " [ 3.24  0.24  2.24  4.24 -1.76]\n",
+      " [ 4.24 -3.76  2.24 -2.76  0.24]]\n",
+      "Desviación estandar:  2.5811625287842688\n",
+      "[[-0.6818633  -0.6818633   0.86782602 -1.06928563 -1.45670796]\n",
+      " [-1.45670796  0.09298136  1.64267068 -0.29444097  0.48040369]\n",
+      " [-0.29444097 -1.45670796  0.48040369  0.09298136  0.48040369]\n",
+      " [ 1.25524835  0.09298136  0.86782602  1.64267068 -0.6818633 ]\n",
+      " [ 1.64267068 -1.45670796  0.86782602 -1.06928563  0.09298136]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat_rand = np.random.randint(1,11, size=(5,5))\n",
+    "print(mat_rand)\n",
+    "aux = np.mean(mat_rand)\n",
+    "print(\"Media: \", aux)\n",
+    "aux2 = (mat_rand - np.mean(mat_rand))\n",
+    "print(\"Datos entorno a 0: \\n\",aux2)\n",
+    "aux3 = np.std(mat_rand)\n",
+    "print(\"Desviación estandar: \", aux3)\n",
+    "norm = (mat_rand - np.mean(mat_rand)) / np.std(mat_rand)\n",
+    "print(norm)\n",
+    "# mat_rand.sum(-np.mean(mat_rand))"
+   ]
   },
   {
    "attachments": {
@@ -202,6 +338,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1, 4]),)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector = np.array([1,2,0,0,4,0])\n",
+    "vec = np.where(vector != 0)\n",
+    "vec"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -210,7 +368,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -224,12 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "252189e587d1e2aeba4a06e91fa71896c7a7f6e22e918b9407c7cde4ef2d5985"
-   }
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
